--- a/CellSim.css
+++ b/CellSim.css
@@ -6,3 +6,8 @@ body { font-family: 'Pretendard', sans-serif; }
     background-color: #4ade80;
     position: relative;
 }
+.h1{
+    text-align: center;
+    font-size: large;
+    color: #c3c1c1
+}
